--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fabricio-191/valve-server-query": "^4.1.2",
-    "axios": "^0.27.2",
-    "next": "12.2.5",
+    "@fabricio-191/valve-server-query": "^4.1.6",
+    "axios": "^1.2.1",
+    "next": "13.0.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.8",
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "autoprefixer": "^10.4.13",
+    "eslint": "8.30.0",
+    "eslint-config-next": "13.0.7",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
