--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^1.0.0",
     "@sveltejs/kit": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
@@ -30,6 +29,7 @@
   "type": "module",
   "dependencies": {
     "@fabricio-191/valve-server-query": "^4.1.7",
+    "@sveltejs/adapter-vercel": "^1.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
