--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "devDependencies": {
     "@sveltejs/kit": "^1.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.47.0",
-    "@typescript-eslint/parser": "^5.47.0",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
@@ -28,9 +28,10 @@
   },
   "type": "module",
   "dependencies": {
-    "@fabricio-191/valve-server-query": "^4.1.7",
     "@sveltejs/adapter-vercel": "^1.0.0",
+    "@types/gamedig": "^4.0.0",
     "autoprefixer": "^10.4.13",
+    "gamedig": "^4.0.5",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
   }
