--- a/package.json
+++ b/package.json
@@ -30,11 +30,10 @@
   },
   "type": "module",
   "dependencies": {
+    "@fabricio-191/valve-server-query": "^4.1.8",
     "@sveltejs/adapter-vercel": "^1.0.0",
-    "@types/gamedig": "^4.0.0",
     "autoprefixer": "^10.4.13",
     "compressjs": "^1.0.3",
-    "gamedig": "^4.0.5",
     "got": "^12.5.3",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
