--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "compressjs": "^1.0.3",
     "got": "^12.5.3",
     "postcss": "^8.4.20",
+    "svelte-preprocess-import-assets": "^0.2.5",
     "tailwindcss": "^3.2.4"
   }
 }
