--- a/package.json
+++ b/package.json
@@ -14,29 +14,29 @@
     "live": "pnpm build && pnpm preview"
   },
   "devDependencies": {
-    "@sveltejs/kit": "^1.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
-    "eslint": "^8.30.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@sveltejs/kit": "^1.22.4",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-svelte3": "^4.0.0",
-    "prettier": "^2.8.1",
-    "prettier-plugin-svelte": "^2.9.0",
-    "svelte": "^3.55.0",
-    "svelte-check": "^3.0.1",
-    "tslib": "^2.4.1",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.3"
+    "prettier": "^2.8.8",
+    "prettier-plugin-svelte": "^2.10.1",
+    "svelte": "^3.59.2",
+    "svelte-check": "^3.4.6",
+    "tslib": "^2.6.1",
+    "typescript": "^4.9.5",
+    "vite": "^4.4.8"
   },
   "type": "module",
   "dependencies": {
-    "@fabricio-191/valve-server-query": "^4.1.8",
-    "@sveltejs/adapter-vercel": "^1.0.0",
-    "autoprefixer": "^10.4.13",
+    "@fabricio-191/valve-server-query": "^4.1.9",
+    "@sveltejs/adapter-auto": "^2.1.0",
+    "autoprefixer": "^10.4.14",
     "compressjs": "^1.0.3",
-    "got": "^12.5.3",
-    "postcss": "^8.4.20",
-    "svelte-preprocess-import-assets": "^0.2.5",
-    "tailwindcss": "^3.2.4"
+    "got": "^12.6.1",
+    "postcss": "^8.4.27",
+    "svelte-preprocess-import-assets": "^0.2.6",
+    "tailwindcss": "^3.3.3"
   }
 }
