--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "type": "module",
   "dependencies": {
     "@fabricio-191/valve-server-query": "^4.1.9",
-    "@sveltejs/adapter-auto": "^2.1.0",
+    "@sveltejs/adapter-node": "^1.3.1",
     "autoprefixer": "^10.4.14",
     "compressjs": "^1.0.3",
     "got": "^13.0.0",
