--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
   },
   "type": "module",
   "dependencies": {
-    "@fabricio-191/valve-server-query": "^4.1.9",
     "@sveltejs/adapter-node": "^5.2.5",
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "autoprefixer": "^10.4.20",
     "compressjs": "^1.0.3",
     "got": "^14.4.3",
     "postcss": "^8.4.47",
+    "steam-server-query": "^1.1.3",
     "svelte-preprocess-import-assets": "^1.1.0",
     "tailwindcss": "^3.4.13"
   }
